tests/ui/rfcs/rfc-2457-non-ascii-idents/crate_name_nonascii_forbidden-1.stderr
error: cannot load a crate with a non-ascii name `ьаг`
  --> $DIR/crate_name_nonascii_forbidden-1.rs:1:1
   |
LL | extern crate ьаг;
   | ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

